test/test_cases/invalid/semanticErr/variables/basicTypeErr06.ast
-- Test: basicTypeErr06.wacc

-- Uploaded file: 
---------------------------------------------------------------
# type mismatch: bool <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = "true"
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:11 -- Incompatible type at "true" (expected: BOOL, actual: CHAR[])

